--- a/kelly/templates/footer.html
+++ b/kelly/templates/footer.html
@@ -8,7 +8,8 @@
                         <div class="col-sm-6">
                             <h2 class="title">About Me</h2>
                             <p>
-                                I am Kelly a Graphic Designer based in New York, specializing in User Interface Design and Development.
+                                I am Kelly a Graphic Designer based in New York, specializing in User Interface Design
+                                and Development.
                             </p>
                         </div>
                         <div class="col-sm-6">
