--- a/kelly/templates/header.html
+++ b/kelly/templates/header.html
@@ -1,35 +1,4 @@
-<!-- Preload -->
-	<div id="preload">
-		<div class="kd-bounce">
-			<div></div>
-			<div></div>
-		</div>
-	</div>
-	<!-- Preload -->
 
-	<!-- Mobile Menu -->
-	<div class="mobile">
-		<div class="container">
-			<!-- Mobile -->
-			<div class="menu-mobile">
-				<span class="item item-1"></span>
-				<span class="item item-2"></span>
-				<span class="item item-3"></span>
-			</div>
-			<!-- End Mobile -->
-
-			<!-- Logo -->
-			<div class="logo">
-				<a href="index.html">Kelly</a>
-			</div>
-			<!-- End Logo -->
-		</div>
-	</div>
-	<div class="hide-menu"></div>
-	<!-- End Mobile Menu -->
-
-	<div class="container">
-		<div class="row">
 
 			<div class="col-md-3">
 				<div class="header affix">
@@ -47,7 +16,7 @@
 									<ul class="menu-list">
 										<li class="active menu-item-has-children">
 											<a href="{% url 'home' %}">Home</a>
-											<ul class="sub-menu">
+											<!-- <ul class="sub-menu">
 												<li>
 													<a href="index.html">List Layout</a>
 												</li>
@@ -73,14 +42,14 @@
 										</li>
 										<li>
 											<a href="#">Furniture</a>
-										</li>
+										</li> -->
 										<li class="menu-item-has-children">
 											<a href="{% url 'blog' %}">Blog</a>
-											<ul class="sub-menu">
-												<li>
+											<ul>
+												<!-- <li>
 													<a href="about.html">About Me</a>
-												</li>
-												<li>
+												</li> -->
+												<!-- <li>
 													<a href="single.html">Single</a>
 												</li>
 												<li>
@@ -88,13 +57,63 @@
 												</li>
 												<li>
 													<a href="404.html">404 Page</a>
-												</li>
+												</li> -->
 											</ul>
 										</li>
+                                        <li>
+											<a href="{% url 'about-us' %}">About Us</a>
+										</li>
 										<li>
-											<a href="contact.html">Contact</a>
+											<a href="{% url 'contact-us' %}">Contact Us</a>
 										</li>
 									</ul>
 								</nav>
 							</div>
 							<!-- End Navigation -->
+
+                            <!-- Socials -->
+                            <div class="socials">
+                                <a href="#" title="Behance">
+                                    <i class="fa fa-behance"></i>
+                                </a>
+                                <a href="#" title="Dribbble">
+                                    <i class="fa fa-dribbble"></i>
+                                </a>
+                                <a href="#" title="Facebook">
+                                    <i class="fa fa-facebook"></i>
+                                </a>
+                                <a href="#" title="Google Plus">
+                                    <i class="fa fa-google-plus"></i>
+                                </a>
+                                <a href="#" title="Instagram">
+                                    <i class="fa fa-instagram"></i>
+                                </a>
+                                <a href="#" title="Search this site">
+                                    <i class="fa fa-search"></i>
+                                </a>
+                            </div>
+                            <div class="box-search">
+                                <div class="table">
+                                    <div class="table-cell">
+                                        <div class="container">
+                                            <form class="search-form" action="#" method="get">
+                                                <input type="search" name="s" class="search-field" placeholder="Type &amp; hit enter" value="" title="Search">
+                                                <div class="kd-close">
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- End Socials -->
+
+                            <div class="copyright">
+                                <p>
+                                    Kelly @ 2018. Design by Kelly
+                                </p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
