--- a/kelly/templates/home.html
+++ b/kelly/templates/home.html
@@ -5,8 +5,8 @@
 			<div class="col-md-9 col-md-offset-3">
 				<div class="projects">
 					<div class="project-item">
-						<a href="single-project.html">
-							<img src="static/images/projects/1.jpg" alt="">
+						<a href="{% url 'home-details' %}">
+							<img src="{% static 'images/projects/1.jpg' %}" alt="">
 						</a>
 						<h2 class="title">
 							<a href="#">Emotions</a>
@@ -14,8 +14,8 @@
 					</div>
 
 					<div class="project-item">
-						<a href="single-project.html">
-							<img src="static/images/projects/2.jpg" alt="">
+						<a href="{% url 'home-details' %}">
+							<img src="{% static 'images/projects/2.jpg' %}" alt="">
 						</a>
 						<h2 class="title">
 							<a href="#">Mountain</a>
@@ -23,8 +23,8 @@
 					</div>
 
 					<div class="project-item">
-						<a href="single-project.html">
-							<img src="static/images/projects/3.jpg" alt="">
+						<a href="{% url 'home-details' %}">
+							<img src="{% static 'images/projects/3.jpg' %}" alt="">
 						</a>
 						<h2 class="title">
 							<a href="#">Interface</a>
@@ -32,8 +32,8 @@
 					</div>
 
 					<div class="project-item">
-						<a href="single-project.html">
-							<img src="static/images/projects/4.jpg" alt="">
+						<a href="{% url 'home-details' %}">
+							<img src="{% static 'images/projects/4.jpg' %}" alt="">
 						</a>
 						<h2 class="title">
 							<a href="#">Transportation</a>
@@ -41,8 +41,8 @@
 					</div>
 
 					<div class="project-item">
-						<a href="single-project.html">
-							<img src="static/images/projects/5.jpg" alt="">
+						<a href="{% url 'home-details' %}">
+							<img src="{% static 'images/projects/5.jpg' %}" alt="">
 						</a>
 						<h2 class="title">
 							<a href="#">Perspective</a>
@@ -50,8 +50,8 @@
 					</div>
 
 					<div class="project-item">
-						<a href="single-project.html">
-							<img src="static/images/projects/6.jpg" alt="">
+						<a href="{% url 'home-details' %}l">
+							<img src="{% static 'images/projects/6.jpg' %}" alt="">
 						</a>
 						<h2 class="title">
 							<a href="#">Mixilicious</a>
@@ -59,8 +59,8 @@
 					</div>
 
 					<div class="project-item">
-						<a href="single-project.html">
-							<img src="static/images/projects/7.jpg" alt="">
+						<a href="{% url 'home-details' %}">
+							<img src="{% static 'images/projects/7.jpg' %}" alt="">
 						</a>
 						<h2 class="title">
 							<a href="#">Creative</a>
@@ -68,8 +68,8 @@
 					</div>
 
 					<div class="project-item">
-						<a href="single-project.html">
-							<img src="static/images/projects/8.jpg" alt="">
+						<a href="{% url 'home-details' %}">
+							<img src="{% static 'images/projects/8.jpg' %}" alt="">
 						</a>
 						<h2 class="title">
 							<a href="#">Stapler</a>
